--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
 
 	<properties>
 		<spring.version>4.0.1.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
+	 	<sonar.host.url>ec2-3-15-147-75.us-east-2.compute.amazonaws.com:9000</sonar.host.url>
+	        <sonar.username>admin</sonar.username>
+	        <sonar.password>admin</sonar.password>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
