--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
 		</dependency>
 
 	</dependencies>
+	<distributionManagement>
+	    <repository>
+	      <id>nexus</id>
+	      <name> Nexus Repository</name>
+	      <url>http://3.91.72.184:8081/repository/maven-releases/</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <url>http://3.91.72.184:8081/repository/maven-snapshot/</url>
+	    </snapshotRepository>
+	</distributionManagement>
 
 
 	<build>
